--- a/html/hello.html
+++ b/html/hello.html
@@ -5,5 +5,28 @@
 </head>
 
 <body>
-    <h1>Lada Pidr</h1>
+    <h1 align="center">
+        Pull requests
+    </h1>
+
+    <table align="center" border="1">
+        <thead>
+            <td>N</td>
+            <td>Name</td>
+            <td>author</td>
+            <td>link</td>
+            <td>approvals</td>
+            <td>created date</td>
+            <td>ready for review</td>
+        </thead> 
+        <tr>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+        </tr>
+    </table>
 </body>
