--- a/html/hello.html
+++ b/html/hello.html
@@ -5,28 +5,6 @@
 </head>
 
 <body>
-    <h1 align="center">
-        Pull requests
-    </h1>
-
-    <table align="center" border="1">
-        <thead>
-            <td>N</td>
-            <td>Name</td>
-            <td>author</td>
-            <td>link</td>
-            <td>approvals</td>
-            <td>created date</td>
-            <td>ready for review</td>
-        </thead> 
-        <tr>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-        </tr>
-    </table>
+    <h1>Hello</h1>
+    <a href="https://kira607.pythonanywhere.com/table">Go to table!</a>
 </body>
